force-app/main/default/objects/Lead/fields/Lead_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Lead_Unique_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Unique Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>