force-app/main/default/objects/Lead/fields/Social_Media_ID__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Social Media ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>