force-app/main/default/objects/Lead/validationRules/Date_of_Birth_should_be_greater_than_18.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_Birth_should_be_greater_than_18</fullName>
    <active>true</active>
    <errorConditionFormula>AND (YEAR(TODAY()) - YEAR( Date_of_Birth__c ) &lt;= 18, $Permission.Skip_Validations_Permission = FALSE)</errorConditionFormula>
    <errorDisplayField>Date_of_Birth__c</errorDisplayField>
    <errorMessage>Date of Birth should be greater than or equal to 18 years of age.</errorMessage>
</ValidationRule>