force-app/main/default/objects/Lead/validationRules/Phone_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>/*
AND(NOT(REGEX( Phone ,(&quot;^\\+([2-9]|8[\\-\\s])[0-9\\-\\s]+|^$&quot;))),$Permission.Skip_Validations_Permission = FALSE)
*/

IF($Permission.Skip_Validations_Permission, 
false,
NOT(REGEX( Phone ,(&quot;^\\+([2-9]|8[\\-\\s])[0-9\\-\\s]+|^$&quot;)))
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Please enter a valid phone no.</errorMessage>
</ValidationRule>